# YueScript

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  e-dev-1.rockspec  makefile
.github/workflows/: macos.yml  ubuntu.yml  wasm.yml  windows.yml
doc/: README.md  package.json  pnpm-lock.yaml  yue-de.md  yue-en.md  yue-id-id.md  yue-pt-br.md  yue-zh.md
doc/docs/: README.md
doc/docs/.vitepress/: config.mts
doc/docs/.vitepress/theme/components/: CompilerModal.vue  YueCompiler.vue  YueDisplay.vue
doc/docs/.vuepress/: config.js
doc/docs/de/doc/advanced/: macro.md
doc/docs/doc/: README.md
doc/docs/doc/advanced/: macro.md
doc/docs/id-id/doc/advanced/: macro.md
doc/docs/pt-br/doc/advanced/: macro.md
doc/docs/zh/: README.md
doc/docs/zh/doc/: README.md
doc/docs/zh/doc/advanced/: macro.md
docker/: Dockerfile
spec/inputs/: annotation.yue  annotation_before.yue  assign.yue
spec/inputs/test/: annotation_spec.yue  ast_spec.yue  format_spec.yue  in_expression_spec.yue  switch_spec.yue
spec/outputs/: annotation.lua  annotation_before.lua  assign.lua  codes_from_doc_de.lua  codes_from_doc_en.lua  codes_from_doc_id-id.lua  codes_from_doc_pt-br.lua  codes_from_doc_zh.lua
spec/outputs/test/: annotation_spec.lua  ast_spec.lua  format_spec.lua  in_expression_spec.lua  switch_spec.lua
src/: e.cpp
src/e/: ast.cpp  ast.hpp  e.cpp  e.h  e_ast.cpp  e_ast.h  e_compiler.cpp  e_compiler.h  e_parser.cpp  e_parser.h  parser.cpp
tup/: app.e
wasm/: package.json
win-build/: E.sln
win-build/E/: E.vcxproj  E.vcxproj.filters
win-build/EDLL/: EDLL.vcxproj  EDLL.vcxproj.filters
